# tether

./: .gitignore  CLAUDE.md  README.md  altstore.json  biome.json  install.sh  package.json  tsconfig.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  desktop.yml  docs-pages.yml  release.yml
apps/mobile/: App.tsx  app.json  index.ts  metro.config.js  package-lock.json  package.json  tsconfig.json
apps/mobile/src/: AlertModal.tsx  AppThemeProvider.tsx  ChangeBanner.tsx  CodeHighlight.tsx  ConfigScreen.tsx  ConnectionBanner.tsx  ContextMenu.tsx  DesktopSessionNavigator.tsx  DiffLines.tsx  DiffView.tsx  Dpad.tsx  FileTree.tsx  FileViewer.tsx  ImageDiff.tsx  OverflowMenu.tsx  PresentationBanner.tsx  PresentationView.native.tsx  PresentationView.tsx  PresentationView.web.tsx  SelectionView.tsx  SessionDrawer.tsx  SessionModals.tsx  SideBySideDiff.tsx  TermRow.tsx  TerminalScreen.tsx  TitleBar.tsx  UpdateModal.tsx  activity.ts  (+71 more)
apps/mobile/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
apps/mobile/src-tauri/capabilities/: default.json
apps/mobile/src-tauri/icons/: icon.icns
apps/mobile/src-tauri/src/: main.rs
apps/server/: .gitignore  README.md  biome.json  bunfig.toml  cli.ts  package.json  test-preload.ts  tsconfig.json
docs/: architecture.md  changelog.md  data-flow.md  decisions.md  desktop.md  getting-started.md  index.md  security.md  updating.md
docs/.vitepress/: config.mts
docs/development/: contributing.md  desktop-signing.md
docs/terminal/: basics.md  saved-commands.md  sessions.md
scripts/: altstore-release.sh  release.sh
(+127 files in other folders)
