[package]
name = "tether-desktop"
version = "1.2.1"
description = "Tether desktop client"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["sync"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
