[package]
name = "tether-desktop"
version = "1.8.5"
description = "Tether desktop client"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde_json = "1"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["sync"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
